<resources>
    <string name="app_name">LuxMeter</string>
    <string name="scan_hint">Please focus on the QR Code</string>
    <string name="manual_login">Manual Login</string>
    <string name="error">Error</string>
    <string name="credentials">Credentials</string>
    <string name="ssid">SSID</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="fill_error">Please enter the device info</string>
    <string name="sensor_values">sensor values (lux)</string>
    <string name="one">1-</string>
    <string name="two">2-</string>
    <string name="three">3-</string>
    <string name="four">4-</string>
    <string name="reset">reset</string>
    <string name="connecting">Connecting…</string>
</resources>
