<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/backgroundColor">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/sensor_values"
        android:textAllCaps="true"
        android:textColor="@color/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tool_bar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/main_title"
        android:layout_marginEnd="5dp"
        android:text="@string/reset"
        android:textAllCaps="true"
        android:textColor="@color/text"
        android:textStyle="bold"
        android:id="@+id/main_reset"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_first_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/elevationColor"
        android:elevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/main_title"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/main_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/one"
            android:textColor="@color/text"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/main_first_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@color/textColor"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@id/main_first"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_second_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/elevationColor"
        android:elevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/main_first_layout"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/main_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/two"
            android:textColor="@color/text"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/main_second_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@color/textColor"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@id/main_second"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_third_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/elevationColor"
        android:elevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/main_second_layout"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/main_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/three"
            android:textColor="@color/text"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/main_third_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@color/textColor"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@id/main_third"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_fourth_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/elevationColor"
        android:elevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/main_third_layout"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/main_fourth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/four"
            android:textColor="@color/text"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/main_fourth_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@color/textColor"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@id/main_fourth"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_fourth_layout"
        android:background="@drawable/mybutton"
        android:text="@string/connect"
        android:textAllCaps="false"
        android:textColor="@color/textColor"
        android:id="@+id/main_connect"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tool_bar"
        app:layout_constraintBottom_toTopOf="@id/main_connect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/text"/>



</androidx.constraintlayout.widget.ConstraintLayout>